bk_ida/gobmkida/c0/set_depth_values
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/set_depth_values/src/engine/utils.c:1190:25: error: use of undeclared identifier 'set_depth_values_node_limits'
owl_node_limit = 1000 * set_depth_values_node_limits[10 - level] / set_depth_values_node_limits[0]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/set_depth_values/src/engine/utils.c:1190:68: error: use of undeclared identifier 'set_depth_values_node_limits'
owl_node_limit = 1000 * set_depth_values_node_limits[10 - level] / set_depth_values_node_limits[0]; 
                                                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/set_depth_values/src/obj/1/utils.o] Error 1
